--- a/crates/wasmtest/deno.jsonc
+++ b/crates/wasmtest/deno.jsonc
@@ -4,7 +4,12 @@
             "command": "./deno/example.ts",
             "dependencies": ["build"]
         },
+        "rerun:debug": {
+            "command": "./deno/example.ts",
+            "dependencies": ["build:debug"]
+        },
         "run": "./deno/example.ts",
-        "build": "wasm-pack build"
+        "build": "wasm-pack build",
+        "build:debug": "wasm-pack build --debug"
     }
 }
