--- a/crates/regtest/Cargo.toml
+++ b/crates/regtest/Cargo.toml
@@ -8,6 +8,7 @@ version = "0.0.0"
 crate-type = ["cdylib"]
 
 [dependencies]
+textwrap = "0.16.2"
 wasm-bindgen = "*"
 
 [dependencies.ratatui-wasm-backend]
